--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "lib": ["es2023"],
     "target": "ES2020", // which level of JS support to target
     "module": "Node16", // which system for the program AMD, UMD, System, CommonJS
 
     // Recommended: Compiler complains about expressions implicitly typed as 'any'
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "moduleResolution": "node16"
   },
-  "include": ["src"], // which files to compile
+  "include": [
+    "./src/**/*"
+  ], // which files to compile
   "exclude": ["node_modules"] // which files to skip
 }
