--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build and Start Bot
+      - name: Build and test Bot
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
           NODE_ENV: ${{ secrets.NODE_ENV || 'production' }}
         run: |
-           npm run test
+          npm run build
+          npm run test
