--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "discord-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "main": "dist/bot.js",
   "scripts": {
     "start": "node dist/bot.js",
     "build": "tsc",
     "dev": "node --loader ts-node/esm src/bot.ts",
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint --ext .ts .",
     "test": "node test/test-bot.js",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "node-ipinfo": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.21.0",
