--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/bot.js",
     "build": "tsc",
-    "dev": "node --loader ts-node/esm src/bot.ts",
+    "dev": "node --loader ts-node/esm --watch src/bot.ts",
     "lint": "eslint --ext .ts .",
     "test": "node test/test-bot.js",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
