feat: add email sending functionality via Excel upload and integrate with bot commands

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,6 @@
     "noImplicitAny": true,
     "moduleResolution": "node16"
   },
-  "include": [
-    "./src/**/*"
-  ], // which files to compile
+  "include": ["./src/**/*"], // which files to compile
   "exclude": ["node_modules"] // which files to skip
 }
