--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.7.9",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "node-ipinfo": "^4.0.1"
+    "node-ipinfo": "^4.0.1",
+    "resend": "^4.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
