--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.1.16",
+    "ai": "^4.1.45",
     "axios": "^1.7.9",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "node-ipinfo": "^4.0.1",
     "resend": "^4.1.2",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
